# cnc-spec-compiler

./: DEVLOG.md  Makefile  README.md  README.txt  Setup.hs  TODO.txt  cnc-spec-compiler.cabal
Intel/Cnc/: EasyEmit.hs
Intel/Cnc/Spec/: CncGrammar.y  CncGrammar.y.pp  CncLexer.x  CncViz.hs  Curses.hs  GatherGraph.hs  GraphAnalysis.hs  MainExecutable.hs  Util.hs  Version.hs
scripts/: extract_version.hs
